# hummingbot-pysui

./: .pre-commit-config.yaml  install  pyproject.toml  setup.py
hummingbot/connector/exchange/suidex/: README.txt  chain_data_source.py  order_book_data_source.py  suidex_constants.py  suidex_exchange.py  suidex_utils.py
hummingbot/connector/exchange/suidex/libsui/: README.md  __init__.py  __main__.py  _create_pool.py  _deepbook_connector.py  _interface.py  _publish_package.py  _sui_client_config.py  deepbook.py
test/hummingbot/connector/exchange/suidex/: __init__.py  programmable_query_executor.py  test_suidex_api_order_book_data_source.py  test_suidex_exchange.py  test_suidex_query_executor.py  test_suidex_utils.py
