[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["setuptools", "wheel", "numpy", "cython==3.0.0a10"]

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true
combine_as_imports = true
conda_env = "hummingbot"
filter_files = true
lines_between_types = 1
lines_between_sections = 1
skip = ["setup.py"]
known_first_party = ["hummingbot", "test.hummingbot"]
extra_standard_library = ['pandas', 'numpy', 'dateutil', 'pytz', 'psycopg2', 'sqlalchemy', 'requests', 'websockets', 'matplotlib', 'pyarrow']
